airport-security/manifests/alert.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-service
  template:
    metadata:
      labels:
        app: alert-service
    spec:
      containers:
      - name: alert-service
        image: ccuni/alert-service-2024w
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 80
