airport-security/manifests/alert.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-service
spec:
  type: ClusterIP
  selector:
    app: alert-service
  ports:
  - name: backend-port
    port: 80
    targetPort: 80
