airport-security/manifests/camera.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camera-1-service
spec:
  type: ClusterIP
  selector:
    app: camera-1-service
  ports:
  - name: backend-port
    port: 8080
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: camera-2-service
spec:
  type: ClusterIP
  selector:
    app: camera-2-service
  ports:
  - name: backend-port
    port: 8080
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: camera-3-service
spec:
  type: ClusterIP
  selector:
    app: camera-3-service
  ports:
  - name: backend-port
    port: 8080
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: camera-4-service
spec:
  type: ClusterIP
  selector:
    app: camera-4-service
  ports:
  - name: backend-port
    port: 8080
    targetPort: 80
