airport-security/manifests/collector.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector-service
spec:
  type: ClusterIP
  selector:
    app: collector-service
  ports:
  - name: backend-port
    port: 80
    targetPort: 80
