airport-security/manifests/face-recognition.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: face-recognition-service
spec:
  type: ClusterIP
  selector:
    app: face-recognition-service
  ports:
  - name: backend-port
    port: 80
    targetPort: 80
