airport-security/manifests/image-analysis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-analysis-service
spec:
  type: ClusterIP
  selector:
    app: image-analysis-service
  ports:
  - name: backend-port
    port: 80
    targetPort: 80
