airport-security/manifests/section.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: section-service
spec:
  type: ClusterIP
  selector:
    app: section-service
  ports:
  - name: backend-port
    port: 80
    targetPort: 80
